# docs/swagger.yaml
@@ -122,6 +122,15 @@ definitions:
       error:
         type: string
     type: object
+  dto.EnvelopeGetApplicationsResponse:
+    properties:
+      data:
+        items:
+          $ref: '#/definitions/dto.GetApplicationsResponse'
+        type: array
+      error:
+        $ref: '#/definitions/dto.ErrorResponse'
+    type: object
   dto.EnvelopeGetJobPostsResponse:
     properties:
       data:
@@ -150,7 +159,7 @@ definitions:
       code:
         type: integer
       details: {}
-      message:
+      errorMessage:
         type: string
     type: object
   dto.GetAllUsers:
@@ -166,6 +175,27 @@ definitions:
       phone:
         type: string
       user_type:
+        type: string
+    type: object
+  dto.GetApplicationsResponse:
+    properties:
+      analysis:
+        type: object
+      created_at:
+        type: string
+      email:
+        type: string
+      id:
+        type: string
+      jobPostID:
+        type: string
+      name:
+        type: string
+      s3_path:
+        type: string
+      seniority_level:
+        type: string
+      status:
         type: string
     type: object
   dto.GetJobPostsResponse:
@@ -291,6 +321,35 @@ info:
   title: ATS System API
   version: "1.0"
 paths:
+  /applications/jobPost/{jobPostID}:
+    get:
+      consumes:
+      - application/json
+      description: Get applications by job post ID
+      parameters:
+      - description: Job Post ID
+        in: path
+        name: jobPostID
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/dto.EnvelopeGetApplicationsResponse'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/dto.ErrorResponse'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/dto.ErrorResponse'
+      summary: Get applications by job post ID
+      tags:
+      - applications
   /auth/login:
     post:
       consumes:
@@ -413,6 +472,28 @@ paths:
       tags:
       - JobPost
   /jobPost/getAllJobPosts:
+    get:
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/dto.EnvelopeGetJobPostsResponse'
+        "401":
+          description: Unauthorized
+          schema:
+            $ref: '#/definitions/dto.ErrorResponse'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/dto.ErrorResponse'
+      security:
+      - BearerAuth: []
+      summary: List all job posts
+      tags:
+      - JobPost
+  /jobPost/getAllJobPostsByUserId:
     get:
       produces:
       - application/json
